--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -59,3 +59,9 @@
         transform: rotate(-2deg) scale(1.1);
     }
 }
+
+.feature-img {
+    max-width: 200px;
+    display: block;
+    margin: 0 auto 15px; /* Centers the image and adds spacing */
+}
