--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -2,12 +2,11 @@
 
 <div class="row justify-content-center text-center mt-lg-3">
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#shield` | relURL }}"/>
-        </svg>
-        <h2 class="h2">Security aware <small class="d-none">🛡️</small></h2>
-        <p>Get A+ scores on <a href="https://observatory.mozilla.org/" target="_blank" rel="noopener">Mozilla Observatory</a>
-            out of the box. Easily change the default Security Headers to suit your needs.</p>
+        <img src="{{ `images/heart plushie.png` | relURL }}" 
+        alt="Heartbeat Plushie" 
+        class="feature-img">
+        <h2 class="h2">Heartbeat Plushie <small class="d-none">💖</small></h2>
+        <p>This adorable plushie features a built-in heartbeat simulator to provide comfort and relaxation, perfect for reducing anxiety and stress.</p>
     </div>
     <div class="col-lg-4">
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
