--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -6,22 +6,24 @@
         alt="Heartbeat Plushie" 
         class="feature-img">
         <h2 class="h2">Heartbeat Plushie <small class="d-none">💖</small></h2>
-        <p>This adorable plushie features a built-in heartbeat simulator to provide comfort and relaxation, perfect for reducing anxiety and stress.</p>
+        <p>Features a built-in heartbeat simulator that mimics the gentle rhythm of a loved one’s heartbeat, providing a sense of closeness, warmth, and security.</p>
     </div>
+
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#zap` | relURL }}"/>
-        </svg>
-        <h2 class="h2">Fast by default <small class="d-none">🚀</small></h2>
-        <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=1f990bcb2d769bb4e82e7fc7a8be2b1f" target="_blank" rel="noopener">Google Lighthouse</a>
-             by default. Hugo Bootstrap Theme removes unused css, prefetches links, and lazy loads images.</p>
+        <img src="{{ `images/weighted plushie.png` | relURL }}" 
+             alt="Weighted Plushie" 
+             class="feature-img">
+        <h2 class="h2">Weighted Plushie <small class="d-none">🧸</small></h2>
+        <p>Designed to provide deep pressure therapy, this weighted plushie helps reduce stress and promote relaxation by applying gentle, calming weight.</p>
     </div>
+
+
     <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#trending-up` | relURL }}"/>
-        </svg>
-        <h2 class="h2">SEO-ready <small class="d-none">📈</small></h2>
-        <p>Use sensible defaults for structured data, <a href="https://ogp.me/" target="_blank" rel="noopener">open graph</a>, and <a href="https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards" target="_blank" rel="noopener">Twitter cards</a>. Or easily change the Search Engine Optimization settings to your liking.</p>
+        <img src="{{ `images/scent plushie.png` | relURL }}" 
+             alt="Scented Plushie" 
+             class="feature-img">
+        <h2 class="h2">Scented Plushie <small class="d-none">🌿</small></h2>
+        <p>Infused with a subtle lavender aroma, this plushie provides a calming effect, helping to ease anxiety and promote restful sleep.</p>
     </div>
 </div>
 
