added new features

--- a/layouts/partials/featured-pages.html
+++ b/layouts/partials/featured-pages.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 g-4">
+{{/*  <div class="row row-cols-1 g-4">
 
     {{ range .Site.Taxonomies.tags.featured }}
         <div class="col">
@@ -27,4 +27,4 @@
     
         </div>
     {{ end }}
-</div>
+</div>  */}}
