--- a/layouts/partials/latest-posts.html
+++ b/layouts/partials/latest-posts.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+{{/*  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
     {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "post" ) }}
         <div class="col">
@@ -31,4 +31,4 @@
         </div>
     {{ end }}
 
-</div>
+</div>  */}}
