--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
       <img class="d-block mx-auto mb-3" src="{{ `images/logo.png` | relURL }}" width="250" height="250" alt="Bootstrap">
       <h1 class="display-4 fw-semibold mb-3">{{ .Site.Title }}</h1>
       <p class="lead mb-4">{{ .Site.Params.Description }}</p>
-      <a class="btn btn-bd-primary btn-lg px-4 mb-2" href="https://github.com/filipecarneiro/hugo-bootstrap-theme" role="button">Get Started</a>
+      <a class="btn btn-bd-primary btn-lg px-4 mb-2" href="https://github.com/daniahsn/hugo-mock-landing-page.git" role="button">Shop Here!</a>
       <p class="text-muted mb-0">Bringing Warmth, One Plush at a Time</p>
     </div>
   </div>
