--- a/layouts/partials/latest-posts.html
+++ b/layouts/partials/latest-posts.html
@@ -1,20 +1,14 @@
-{{/*  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-
-    {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "post" ) }}
+<div class="row row-cols-1 g-4">
+    {{ range first 1 (where .Site.RegularPages.ByDate.Reverse "Section" "post" ) }}
         <div class="col">
-
-            <div class="card h-100">
-                <div class="card-body">
-                    <h4 class="card-title">
+            <div class="card h-100 shadow-sm border-0" style="background-color: #FFEFE6; border-radius: 15px;">
+                <div class="card-body text-center">
+                    <h4 class="card-title" style="color: #B35A7D;">
                         <a class="stretched-link text-primary text-decoration-none" href="{{ .RelPermalink }}">
-                            {{ .Title }}
+                           {{ .Title }}
                         </a>
                     </h4>
-                    {{ with .Params.authors }}
-                        <p class="card-subtitle text-muted">
-                            by {{ index . 0 }}
-                        </p>
-                    {{ end }}
+                    
                     <p class="card-text mt-3">
                         {{ with .Params.description }}
                             {{ . }}
@@ -23,12 +17,10 @@
                         {{ end }}
                     </p>
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">{{ .Date | time.Format ":date_long" }}</small>
+                <div class="card-footer text-center" style="background-color: #FFD9E6; border-radius: 0 0 15px 15px;">
+                    <small class="text-muted">🧸 Updated on: {{ .Date | time.Format ":date_long" }}</small>
                 </div>
             </div>
- 
         </div>
     {{ end }}
-
-</div>  */}}
+</div>
